ufak başlangıc devamı yarın

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Yemek Tarifi</title>
 </head>
 <body>
+    <!-- header  -->
+    <header>
+        <h1 style="color: aqua;">***<em>Ağlayan Pasta</em>***</h1>
+    </header>
+    <hr>
+    
     
 </body>
 </html>
