--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li>Krem şantiyi soğuyan kekin üzerine yayın ve daha sonra soğuyan çikolata sosunuda krem şantinin üstüne yayın.</li>
             <li>Pastanızı en az 2 saat buzdolabında bekletelim.</li>
         </ol> 
-        <p> <span style="color:teal;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure perferendis odit aspernatur?</span><span style="font-size: 250%;">Afiyet Olsun</span><span style="color: teal;"> ad nisi in ipsa necessitatibus error ipsum magni reiciendis, ducimus laboriosam commodi porro? Facilis, delectus </span></p>
+        <p> <span style="color:teal;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure perferendis odit aspernatur?</span><span style="font-size: 45px;">Afiyet Olsun</span><span style="color: teal;"> ad nisi in ipsa necessitatibus error ipsum magni reiciendis, ducimus laboriosam commodi porro? Facilis, delectus </span></p>
         <br><br><hr>
 
         <footer>
